--- a/public/components/navbar/navbar.html
+++ b/public/components/navbar/navbar.html
@@ -16,9 +16,10 @@
             <div class="col-auto order-3 collapse navbar-collapse align-content-between" id="navbarText1">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" data-toggle="collapse" data-target="#booksCollapseLG, #booksCollapseXS" href="#">Books</a>
+                        <a class="nav-link" data-toggle="collapse" data-target="#booksCollapseLG, #booksCollapseXS" href="#">
+                            Books <span class="fa d-inline-block align-middle font-weight-light text-light fa-angle-down"></span></a>
                             <div class="navbar-collapse collapse d-lg-none" id="booksCollapseXS">
-                            <ul class="navbar-nav text-white d-lg-none">
+                            <ul class="navbar-nav text-white d-lg-none px-3">
                                     <a class="text-light" href="">All the books</a>
                                     <a class="text-light" href="">The latest books</a>
                                     <a class="text-light" href="">All genres</a>
@@ -35,9 +36,10 @@
                         <a class="nav-link" href="#">Events</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" data-toggle="collapse" data-target="#aboutCollapseLG, #aboutCollapseXS" href="#">About us</a>
+                        <a class="nav-link" data-toggle="collapse" data-target="#aboutCollapseLG, #aboutCollapseXS" href="#">
+                            About us <span class="fa d-inline-block align-middle font-weight-light text-light fa-angle-down"></span></a>
                         <div class="navbar-collapse collapse d-lg-none" id="aboutCollapseXS">
-                            <ul class="navbar-nav text-white d-lg-none">
+                            <ul class="navbar-nav text-white d-lg-none px-3">
                                 <a class="text-light" href="">Who we are</a>
                                 <a class="text-light" href="">Contact us</a>
                                 <a class="text-light" href="">Ordering and shipping informations</a>
@@ -50,14 +52,14 @@
                 <div class="w-100">
                     <div class="row ml-auto justify-content-end">
                         <a href="/profile/cart" class="nav-link">
-                            <span class="fa font-weight-bold text-white fa-shopping-cart nav-text"></span>
+                            <span class="fa text-white fa-shopping-cart nav-text"></span>
                         </a>
                         <a class="nav-link mx-3" href="#">
-                            <span class="fa font-weight-bold text-white fa-heart nav-text"></span>
+                            <span class="fa text-white fa-heart nav-text"></span>
                         </a>
                         <a class="nav-link" id="profile-button" data-toggle="collapse" data-target="" aria-controls=""
                            aria-expanded="false">
-                            <span class="fa font-weight-bold text-white fa-user nav-text"></span>
+                            <span class="fa fa-user text-white nav-text"></span>
                         </a>
                     </div>
                 </div>
