--- a/public/components/navbar/navbar.html
+++ b/public/components/navbar/navbar.html
@@ -3,7 +3,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-3">
         <div class="container p-0">
             <div class="col-auto order-1 px-0 mx-0">
-                <button class="navbar-toggler order-0" type="button" data-toggle="collapse" data-target="#navbarText1" aria-controls="navbarText1" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler no-glow border-0 order-0" type="button" data-toggle="collapse" data-target="#navbarText1" aria-controls="navbarText1" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
             </div>
@@ -37,7 +37,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" data-toggle="collapse" data-target="#aboutCollapseLG, #aboutCollapseXS" href="#">
-                            About us <span class="fa d-inline-block align-middle font-weight-light text-light fa-angle-down"></span></a>
+                            About us <span class="fa nav-arrows d-inline-block align-middle font-weight-light text-light fa-angle-down"></span></a>
                         <div class="navbar-collapse collapse d-lg-none" id="aboutCollapseXS">
                             <ul class="navbar-nav text-white d-lg-none px-3">
                                 <a class="text-light" href="">Who we are</a>
