--- a/public/components/navbar/navbar.scss
+++ b/public/components/navbar/navbar.scss
@@ -51,7 +51,9 @@ div .blurred-bg:before {
     font-size: 20px;
 }
 
+.nav-arrows:focus, .nav-arrows:active {
 
+}
 
 #books-expanded {
     background-color: rgba(33, 38, 63, 0.5);
