Search event style

--- a/public/components/search/event/event-search.html
+++ b/public/components/search/event/event-search.html
@@ -1,6 +1,6 @@
 <div class="row">
-    <div class="container event-date bg-dark m-3">
-        <div class="col h-100 d-flex align-items-around">
+    <div class="event-date bg-dark m-3">
+        <div class="h-100 d-flex align-items-around">
             <div class="w-100 text-white text-center my-auto">
             <h4 class="day mt-2">12</h4>
             <h6 class="month">January</h6>
@@ -8,7 +8,7 @@
         </div>
     </div>
 
-    <div class="col-sm-12 col-md-9 p-3 d-flex justify-content-center">
+    <div class="col-12 col-lg-10 p-3 d-flex justify-content-center">
         <div class="container order-book-element border rounded-bobooky border-dark">
             <div class="py-3">
                 <div class="row align-items-center">
