--- a/public/search/event/event-search.scss
+++ b/public/search/event/event-search.scss
@@ -6,7 +6,7 @@
   height:120px;
   width:120px;
   border-radius:60px;
-  @include media-breakpoint-down(sm){
+  @include media-breakpoint-down(md){
     height:auto;
     width:100%;
   }
