--- a/public/components/order/order-book-element.html
+++ b/public/components/order/order-book-element.html
@@ -1,31 +1,31 @@
-<div class="container order-book-element">
+<div class="container m-0 order-book-element">
     <div class="py-3">
         <div class="row align-items-center">
-            <div class="col-3 col-sm-3 pl-4">
-                <img class="w-100 book-image"
+            <div class="col-4 col-lg-3 col-sm-3 p-0">
+                <img class="w-100 book-cover p-0 book-image"
                      src="https://images-na.ssl-images-amazon.com/images/I/51DA1hQNnJL._SX324_BO1,204,203,200_.jpg"
                     style="max-width: 100px">
             </div>
-            <div class="col h-100">
-                <div class="container h-100 px-0">
+            <div class= "col px-0 h-100">
+                <div class="container ml-3 h-100">
                     <div class="row h-100">
-                        <div class="col-12 col-md-6 title">
+                        <div class="col-12 h-100 col-lg-6 title">
                             <h5 class="book-title">Title</h5>
                             <h6 class="book-author">Author</h6>
                         </div>
-                        <div class="col-12 col-md-3 p-0 m-0">
+                        <div class="col-12 col-lg-3">
                             <div class="container h-100">
-                                <div class="row h-100 mt-2">
+                                <div class="row h-100 align-content-center mb-4">
                                     <h5 class="book-qty">2</h5>
                                     <h5 class="mx-2">x</h5>
                                     <h5 class="book-price">€ 13.50</h5>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-md-3 h-100">
-                            <a class="btn btn-default btn-secondary rounded-pill buy-button" href="">
+                        <div class="col-12 col-lg-3 pr-3 align-self-center">
+                            <button class="btn btn-default btn-secondary float-right rounded-pill buy-button w-auto" href="">
                                 Buy again
-                            </a>
+                            </button>
                         </div>
                     </div>
                 </div>
