--- a/public/components/order/order-element.html
+++ b/public/components/order/order-element.html
@@ -2,13 +2,13 @@
     <div class="col">
         <div class="container order-item border border-secondary rounded-bobooky overflow-hidden">
             <div class="row bg-secondary py-3">
-                <div class="col-12 col-md-4">
+                <div class="col-12 solid col-md-4">
                     <div class="container">
                         Ordered on <br/>
                         <h5 class="order-date">Data a caso</h5>
                     </div>
                 </div>
-                <div class="col-12 col-md-8">
+                <div class="col-12 solid col-md-8">
                     <div class="container">
                         <div class="row">
                             <div class="col-8">
@@ -16,6 +16,7 @@
                                 <h5 class="address-name">Nome a caso</h5>
                             </div>
                             <div class="col-4 my-auto">
+                                Total:
                                 <h5 class="order-amount">45</h5>
                             </div>
                         </div>
@@ -23,7 +24,7 @@
                 </div>
             </div>
 
-            <div class="container book-element-container">
+            <div class="container p-0 book-element-container">
 
             </div>
 
