--- a/public/components/navbar/navbar.scss
+++ b/public/components/navbar/navbar.scss
@@ -5,14 +5,12 @@
 
 $logo-height: 30px;
 
-.navbar.scrolled {
-    transition: background-color 200ms linear;
+.navbar {
+    /* IMPORTANT! IF YOU CHANGE THE NAVBAR HEIGHT
+    MAKE SURE TO CHANGE THE BODY PADDING
+    AS WELL IN BOBOOKY THEME!*/
+    height: 70px;
 }
-
-.navbar.unscrolled {
-    transition: background-color 200ms linear;
-}
-
 
 div .blurred-bg {
     position: relative;
