Add search for events

--- a/public/components/search/event/event-search.html
+++ b/public/components/search/event/event-search.html
@@ -27,7 +27,7 @@
                             </div>
                             <div class="row">
                                 <div class="col">
-                                    <h5 class="event-author">Name of the Book</h5>
+                                    <h5 class="event-book">Name of the Book</h5>
                                 </div>
                             </div>
                         </div>
