Fixed event rendering issues.

--- a/public/search/event/event-search.css
+++ b/public/search/event/event-search.css
@@ -10,4 +10,12 @@
   }
 }
 
+.event-item:first-child .col.d-block.d-lg-none {
+  margin-top: 0;
+}
+
+.event-item .col.d-block.d-lg-none {
+  margin-top: 70px;
+}
+
 /*# sourceMappingURL=event-search.css.map */
