--- a/public/search/event/event-search.scss
+++ b/public/search/event/event-search.scss
@@ -2,6 +2,7 @@
 @import "../../lib/bootstrap/scss/variables";
 @import "../../lib/bootstrap/scss/mixins/breakpoints";
 
+
 .event-date {
   height:120px;
   width:120px;
@@ -10,4 +11,12 @@
     height:auto;
     width:100%;
   }
+}
+
+.event-item:first-child  .col.d-block.d-lg-none {
+  margin-top: 0;
+}
+
+.event-item  .col.d-block.d-lg-none {
+  margin-top: 70px;
 }
