--- a/public/components/search/event/event-search.html
+++ b/public/components/search/event/event-search.html
@@ -1,14 +1,25 @@
-<div class="row">
-    <div class="event-date bg-dark m-3">
-        <div class="h-100 d-flex align-items-around">
-            <div class="w-100 text-white text-center my-auto">
-            <h4 class="day mt-2">12</h4>
-            <h6 class="month">January</h6>
+<div class="event-item row mb-3">
+    <div class="col d-block d-lg-none mb-3">
+        <div class="event-date bg-dark overflow-hidden py-3">
+            <div class="h-100 w-100 d-flex flex-column justify-content-center">
+                <div class="text-white text-center">
+                    <h4 class="day mt-0 mb-1">12</h4>
+                    <h6 class="month my-0">January</h6>
+                </div>
             </div>
         </div>
     </div>
-
-    <div class="col-12 col-lg-10 p-3 d-flex justify-content-center">
+    <div class="col-2 d-none d-lg-block">
+        <div class="event-date bg-dark overflow-hidden">
+            <div class="h-100 w-100 d-flex flex-column justify-content-center">
+                <div class="text-white text-center">
+                    <h4 class="day mt-0 mb-1">12</h4>
+                    <h6 class="month my-0">January</h6>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-12 col-lg-10 d-flex justify-content-center">
         <div class="container order-book-element border rounded-bobooky border-dark">
             <div class="py-3">
                 <div class="row align-items-center">
