--- a/public/lib/scss/bobooky-theme.css
+++ b/public/lib/scss/bobooky-theme.css
@@ -10843,33 +10843,54 @@ body {
   border-radius: 50% !important;
 }
 
+.navigation-btn {
+  width: 120px;
+}
+
 .no-glow:focus, .no-glow:active {
   outline: none !important;
   box-shadow: none;
 }
 
+.btn-gradient > a:hover {
+  color: white !important;
+  background-position: right center !important;
+}
+
 .gradient-warning {
-  background-image: linear-gradient(to right, #F39325 0%, #F7BC5D 60%);
+  background-size: 150% auto;
+  transition: 0.5s;
+  background-image: linear-gradient(to right, #f1491c 0%, #F39325 51%, #ffb820 100%);
 }
 
 .gradient-primary {
-  background-image: linear-gradient(to right, #0D71B9 0%, #05AB9E 80%);
+  background-size: 150% auto;
+  transition: 0.5s;
+  background-image: linear-gradient(to right, #10385d 0%, #0D71B9 51%, #3c97a8 100%);
 }
 
 .gradient-secondary {
-  background-image: linear-gradient(to right, #05AB9E 0%, #5ef4e7 51%);
+  background-size: 150% auto;
+  transition: 0.5s;
+  background-image: linear-gradient(to right, #00704d 0%, #05AB9E 51%, #58a85c 100%);
 }
 
 .gradient-purple {
-  background-image: linear-gradient(to right, #8E3089 0%, #E83273 51%);
+  background-size: 150% auto;
+  transition: 0.5s;
+  background-image: linear-gradient(to right, #E83273 0%, #8E3089, #7f56aa 100%);
 }
 
 .gradient-pink {
-  background-image: linear-gradient(to right, #E83273 0%, #fb8acd 51%);
+  background-size: 150% auto;
+  transition: 0.5s;
+  background-image: linear-gradient(to right, #9a077e 0%, #E83273 51%, #fb63a0 100%);
 }
 
 .gradient-danger {
-  background-image: linear-gradient(to right, #AD2528 0%, #E83273 51%);
+  background-size: 150% auto;
+  transition: 0.5s;
+  background-image: linear-gradient(to right, #7b0353 0%, #AD2528 51%, #ff5f4e 100%);
 }
 
 .gradient-dark {
