--- a/public/components/navbar/navbar.css
+++ b/public/components/navbar/navbar.css
@@ -2,7 +2,11 @@
   /* IMPORTANT! IF YOU CHANGE THE NAVBAR HEIGHT
   MAKE SURE TO CHANGE THE BODY PADDING
   AS WELL IN BOBOOKY THEME!*/
-  height: 70px;
+}
+@media (min-width: 992px) {
+  .navbar {
+    height: 70px;
+  }
 }
 
 div .blurred-bg {
