--- a/public/components/search/event/event-search.html
+++ b/public/components/search/event/event-search.html
@@ -23,7 +23,6 @@
         <div class="container order-book-element border rounded-bobooky border-dark">
             <div class="py-3">
                 <div class="row align-items-center">
-
                     <div class="col-12 col-md-6">
                         <div class="container">
                             <div class="row">
@@ -75,7 +74,7 @@
                             </div>
                             <div class="row">
                                 <div class="col">
-                                    <span class="more text-purple">more details</span>
+                                    <a href="#" class="more text-purple">more details</a>
                                 </div>
                             </div>
                         </div>
