--- a/public/author/author.scss
+++ b/public/author/author.scss
@@ -209,4 +209,16 @@ $related-align: $related-book-section-margin + ($carousel-height + 2 * $padding)
     width: 300px;
     height: 300px;
     background-size: cover;
+    @include media-breakpoint-down(lg) {
+        width: 250px;
+        height: 250px;
+    }
+    @include media-breakpoint-down(md) {
+        width: 150px;
+        height: 150px;
+    }
+    @include media-breakpoint-down(sm) {
+        width: 300px;
+        height: 300px;
+    }
 }
