--- a/public/event/event.css
+++ b/public/event/event.css
@@ -204,21 +204,34 @@
   }
 }
 
-.author-reviews {
+.event-reviews {
   position: relative;
   bottom: 0;
   margin-top: -11rem;
 }
 
-.author-reviews > .container {
-  height: 100%;
-  padding-top: 16rem;
-}
-
-.author-image .img {
+.event-image .img {
   width: 300px;
   height: 300px;
   background-size: cover;
 }
+@media (max-width: 1199.98px) {
+  .event-image .img {
+    width: 250px;
+    height: 250px;
+  }
+}
+@media (max-width: 991.98px) {
+  .event-image .img {
+    width: 150px;
+    height: 150px;
+  }
+}
+@media (max-width: 767.98px) {
+  .event-image .img {
+    width: 300px;
+    height: 300px;
+  }
+}
 
-/*# sourceMappingURL=author.css.map */
+/*# sourceMappingURL=event.css.map */
