Huge commit. Open it to see more details. Many files changed and to-do list shrunk :)

--- a/public/components/address/address.html
+++ b/public/components/address/address.html
@@ -12,9 +12,9 @@
                 <button type="button" class="btn no-glow dropdown-toggle-split " id="dropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <span class="fa text-secondary fa-ellipsis-h fa-2x"></span>
                 </button>
-                <ul class="dropdown-menu dropdown-menu-right bg-secondary border-0" aria-labelledby="dropdownMenu">
-                    <li><a class="dropdown-item text-white" href="#">Edit </a></li>
-                    <li><a class="dropdown-item text-white trash-button" href="#">Delete </a></li>
+                <ul class="dropdown-menu dropdown-menu-right bg-secondary border-0 address-actions" aria-labelledby="dropdownMenu">
+                    <li><a class="dropdown-item text-white edit">Edit </a></li>
+                    <li><a class="dropdown-item text-white trash-button delete">Delete </a></li>
                 </ul>
             </div>
         </div>
