--- a/public/components/footer/footer.html
+++ b/public/components/footer/footer.html
@@ -1,5 +1,5 @@
-<!-- FOOTER -->
-<div class="row bg-dark m-0 h-100">
+<!--FOOTER-->
+<div class="row bg-dark m-0 footer bottom">
     <div class="flex-column w-100 text-center mt-3">
         <a class="fa text-white text-decoration-none fa-2x fa-angle-up" href="#top"></a>
     </div>
@@ -50,4 +50,4 @@
         </div>
     </div>
 </div>
-<!-- END OF FOOTER -->
+<!--END OF FOOTER-->
