--- a/public/components/navbar/navbar.html
+++ b/public/components/navbar/navbar.html
@@ -51,10 +51,10 @@
             <div class="col-auto order-2 order-lg-last navbar-nav">
                 <div class="w-100">
                     <div class="row ml-auto justify-content-end">
-                        <a href="/profile/cart" class="nav-link">
+                        <a id="cart-button" class="nav-link">
                             <span class="fa text-white fa-shopping-cart nav-text"></span>
                         </a>
-                        <a class="nav-link mx-3" href="#">
+                        <a class="nav-link mx-3" id="wishlist-button">
                             <span class="fa text-white fa-heart nav-text"></span>
                         </a>
                         <a class="nav-link" id="profile-button" data-toggle="collapse" data-target="" aria-controls=""
@@ -155,7 +155,7 @@
                                 <h3 class="text-white">
                                     Hi <span id="username"></span>!
                                 </h3>
-                                <button type="button" class="btn btn-dark rounded-pill logout">
+                                <button type="button" class="btn btn-dark rounded-pill logout d-none d-lg-block">
                                     Logout
                                 </button>
                                 <hr class="style1 border-white d-lg-none d-block">
@@ -165,7 +165,7 @@
                             <div class="container p-0 text-lg-center">
                                 <div class="row">
                                     <div class="col-12 col-lg py-1 py-lg-0">
-                                        <a href="/profile/account" class="text-white">My Account</a>
+                                        <a href="/profile" class="text-white">My Profile</a>
                                     </div>
                                     <div class="col-12 col-lg py-1 py-lg-0">
                                         <a href="#" class="text-white">Orders</a>
