--- a/public/profile/scss/index.css
+++ b/public/profile/scss/index.css
@@ -1,39 +1,14 @@
-.mailbox {
+body {
   background-image: url("/assets/images/account_mailbox.svg");
   background-position: 10% bottom;
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: 40vh;
 }
-@media (max-width: 575.98px) {
-  .mailbox {
+@media (max-width: 991.98px) {
+  body {
     background-image: none;
   }
-}
-
-.side-item {
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-@media (min-width: 768px) {
-  .side-item {
-    position: absolute;
-  }
-}
-
-.side-item-right {
-  position: relative;
-  float: right;
-  width: 100%;
-  height: 100%;
-}
-
-.make-me-sticky {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
-  padding: 0 15px;
 }
 
 .main {
