--- a/public/profile/scss/index.scss
+++ b/public/profile/scss/index.scss
@@ -1,43 +1,19 @@
-@import "../../../lib/scss/booboky-colors.scss";
-@import "../../../lib/bootstrap/scss/functions";
-@import "../../../lib/bootstrap/scss/variables";
-@import "../../../lib/bootstrap/scss/mixins/breakpoints";
+@import "../../lib/scss/booboky-colors";
+@import "../../lib/bootstrap/scss/functions";
+@import "../../lib/bootstrap/scss/variables";
+@import "../../lib/bootstrap/scss/mixins/breakpoints";
 
 //background trial
-.mailbox {
+body {
   background-image: url("/assets/images/account_mailbox.svg");
   background-position: 10% bottom;
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: 40vh;
 
-  @include media-breakpoint-down(xs) {
+  @include media-breakpoint-down(md) {
     background-image: none;
   }
-}
-
-.side-item {
-position: relative;
-  width: 100%;
-  height: 100%;
-  @include media-breakpoint-up(md) {
-    position: absolute;
-  }
-}
-
-.side-item-right {
-  position: relative;
-  float: right;
-  width: 100%;
-  height: 100%;
-}
-
-.make-me-sticky {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
-
-  padding: 0 15px;
 }
 
 .main {
