--- a/public/components/footer/footer.html
+++ b/public/components/footer/footer.html
@@ -7,7 +7,7 @@
         <div class="row py-5">
             <div class="col-3 d-none d-md-block">
                 <a class="navbar-brand-b" href="/">
-                    <img src="/assets/logo_white.png"/>
+                    <img src="/assets/images/logo_vettoriale.svg"/>
                 </a>
             </div>
             <div class="col-6 col-md-3 px-3">
