--- a/public/components/navbar/navbar.html
+++ b/public/components/navbar/navbar.html
@@ -9,7 +9,7 @@
             </div>
             <div class="col-lg-auto col order-1 pl-3">
                 <a class="navbar-brand-b" href="/">
-                    <img src="/assets/logo_white.png"/>
+                    <img src="/assets/images/logo_vettoriale.svg"/>
                 </a>
             </div>
 
@@ -40,9 +40,9 @@
                             About us <span class="fa nav-arrows d-inline-block align-middle font-weight-light text-light fa-angle-down"></span></a>
                         <div class="navbar-collapse collapse d-lg-none" id="aboutCollapseXS">
                             <ul class="navbar-nav text-white d-lg-none px-3">
-                                <a class="text-light" href="/about/">Who we are</a>
+                                <a class="text-light" href="/about/">About us</a>
                                 <a class="text-light" href="/about/contact">Contact us</a>
-                                <a class="text-light" href="/about/shipping">Ordering and shipping informations</a>
+                                <a class="text-light mb-3" href="/about/shipping">Ordering and shipping informations</a>
                             </ul>
                         </div>
                     </li>
@@ -52,14 +52,14 @@
                 <div class="w-100">
                     <div class="row ml-auto justify-content-end">
                         <a id="cart-button" class="nav-link">
-                            <span class="fa text-white fa-shopping-cart nav-text"></span>
+                            <img class="align-self-center" src="/assets/images/icon_cart.svg" alt="cart button" style="width: auto; height: 20px;">
                         </a>
                         <a class="nav-link mx-3" id="wishlist-button">
-                            <span class="fa text-white fa-heart nav-text"></span>
+                            <img class="align-self-center" src="/assets/images/icon_cuore.svg" alt="cart button" style="width: auto; height: 18px;">
                         </a>
                         <a class="nav-link" id="profile-button" data-toggle="collapse" data-target="" aria-controls=""
                            aria-expanded="false">
-                            <span class="fa fa-user text-white nav-text"></span>
+                            <img class="align-self-center" src="/assets/images/icon_user.svg" alt="cart button" style="width: auto; height: 22px;">
                         </a>
                     </div>
                 </div>
@@ -71,7 +71,7 @@
     <div class="auto-hide collapse sub-menu blurred-bg" id="booksCollapseLG">
         <div class="container w-100 py-4">
             <div class="row">
-                <a class="mx-auto text-white" href="/search/?q=">All the books</a>
+                <a class="mx-auto text-white" href="/search/?q=">Search</a>
                 <a class="mx-auto text-white" href="/search/more/?keyword=latest">The latest books</a>
                 <a class="mx-auto text-white" href="/discover/?show=genres">All genres</a>
                 <a class="mx-auto text-white" href="/discover/?show=themes">All themes</a>
@@ -84,7 +84,7 @@
     <div class="auto-hide collapse sub-menu blurred-bg" id="aboutCollapseLG">
         <div class="container w-100 py-4">
             <div class="row">
-                <a class="mx-auto text-white" href="/about/">Who we are</a>
+                <a class="mx-auto text-white" href="/about/">About us</a>
                 <a class="mx-auto text-white" href="/about/contact">Contact us</a>
                 <a class="mx-auto text-white" href="/about/shipping">Ordering and shipping informations</a>
             </div>
