--- a/public/lib/scss/bobooky-theme.scss
+++ b/public/lib/scss/bobooky-theme.scss
@@ -86,7 +86,7 @@ body {
         color: $color
     }
 
-    .bobooky-#{$key}.form-control:focus {
+    .bobooky-#{$key}:focus {
         border-color: $color
     }
 
