--- a/public/components/loading/loading.html
+++ b/public/components/loading/loading.html
@@ -6,6 +6,6 @@ Or you can inject it with its own controller (loading.js). Note that in the latt
 <div class="loading d-flex flex-column justify-content-center text-white bg-dark">
     <div class="container text-center">
         <img src="/assets/images/loading.gif" alt="Loading" style="width:30%"><br>
-        <img class="mt-5" src="/assets/logo_white.png" alt="Bobooky">
+        <img  class="mt-5" src="/assets/images/logo_vettoriale.svg" style="width:150px" alt="Bobooky"/>
     </div>
 </div>
