--- a/public/components/footer/footer.html
+++ b/public/components/footer/footer.html
@@ -1,6 +1,7 @@
 <!--FOOTER-->
-<div class="row bg-dark m-0 footer bottom">
-    <div class="flex-column w-100 text-center mt-3">
+<div class="row-fluid h-auto bg-transparent mb-0 pt-4 pb-0 footer bottom">
+    <div class="container-fluid w-100 bg-dark p-0 m-0">
+    <div class="flex-column w-100 text-center py-3 mt-3">
         <a class="fa text-white text-decoration-none fa-2x fa-angle-up" href="#top"></a>
     </div>
     <div class="container text-white">
@@ -11,7 +12,7 @@
                 </a>
             </div>
             <div class="col-6 col-md-3 px-3">
-                <ul class="px-0 link-pink">
+                <ul class="px-3 link-pink">
                     <a class="text-light" href="">All the books</a><br>
                     <a class="text-light" href="">The latest books</a><br>
                     <a class="text-light" href="">All genres</a><br>
@@ -24,7 +25,7 @@
                 <div class="link-danger">
                     <a class="text-light" href="">All the authors</a><br>
                 </div>
-                <div class="link-purple py-2">
+                <div class="link-purple">
                     <a class="text-light" href="">All the events</a><br>
                 </div>
                 <div class="link-warning">
@@ -43,11 +44,12 @@
         </div>
         <div class="row">
             <div class="col-12 pb-5 text-center">
-                <span class="text-light">Made thanks to the <i class="fa fa-handshake-o"></i> of engineers with a super friendly designer</span><br><br>
+                <span class="text-light">Made thanks to the <i class="fa fa-handshake-o"></i> between engineers and a designer</span><br><br>
                 <span class="text-light">©Hypermedia Applications - Politecnico di Milano 2019</span><br>
                 <span class="text-light">Alberto Mario Bellini <i class="fa fa-magic"></i> - Gianpaolo Di Pietro <i class="fa fa-server"></i> - Luna Alessia Rota <i class="fa fa-pencil"></i></span>
             </div>
         </div>
+    </div>
     </div>
 </div>
 <!--END OF FOOTER-->
