--- a/public/lib/scss/bobooky-theme.scss
+++ b/public/lib/scss/bobooky-theme.scss
@@ -121,14 +121,13 @@ body {
     src: url(https://fonts.googleapis.com/css?family=Nunito&display=swap);
 }
 
-body {
-    /*
+html, input, p, span, .font-body {
     font-family: 'Open Sans', sans-serif;
-    font-weight: lighter;
+    font-size: 16px !important;
     h1, h2, h3, h4, h5, h6, .title {
+      font-min-size: 18px;
         font-family: 'Nunito', sans-serif;
     }
-    */
 }
 
 .linear-gradient {
