--- a/public/components/order/order-element.html
+++ b/public/components/order/order-element.html
@@ -15,7 +15,7 @@
                                 Sent to <br/>
                                 <h5 class="address-name">Nome a caso</h5>
                             </div>
-                            <div class="col-4 my-auto">
+                            <div class="col-4 mx-0 px-0 my-auto">
                                 Total:
                                 <h5 class="order-amount">45</h5>
                             </div>
